# llm_toaster

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  extract_inference_model.py  inference.py  plot_training_loss.py  pyproject.toml  setup.py  trainer.py
.github/workflows/: ci.yml
config/: __init__.py  config.yaml  config_handler.py  default_config.yaml  smoke_test_config.yaml
config/sweeps/: example.yaml  pilot_gqa.yaml  smoke.yaml
dataspace/: __init__.py
dataspace/loaders/: data_loader.py  download_tokenize_hf.py
dataspace/src/: data_loader.py  download_tokenize_hf.py  download_tokenize_hf_WebInstructSub.py
docs/: architecture.md  data-pipeline.md  how-to-run.md  running_sweeps.md
llm_model/: README.md  __init__.py  model.py
llm_model/checkpoints/: config
llm_toaster/toaster/: generation.py  report.py  tokenizers.py
llm_toaster/toaster/config/: schema.py
llm_toaster/toaster/data/: __init__.py  adapters.py  cli.py  coordinator.py  document_streams.py  errors.py  hf_source.py  legacy.py  manifest.py  packing.py  producer.py  protocol.py  shard_source.py  shard_store.py  sources.py  statefiles.py
llm_toaster/toaster/experiments/: __init__.py  aggregate.py  (+2 more)
logs/: metrics.csv
model/: __init__.py  model.py
model/babyGPT/: babyGPT_config.yaml
scripts/: aggregate.py  bench_device.py  benchmark_attention.py  data.py  describe_arch.py  evaluate.py  generate.py  prepare_dataset.py  sweep.py  train.py
tests/: test_bench.py  test_config_and_data.py  test_config_validation.py  test_data_cli.py  test_data_loader.py  test_data_manifest.py  test_data_producer.py  test_data_shard_store.py  test_data_sources.py  test_engine_components.py  test_engine_data_modes.py  test_inference_roundtrip.py  test_legacy_shims.py  test_metrics.py  test_models_and_lora.py  test_report.py  test_robustness.py  test_sizing.py  test_sweep.py  test_tokenizers.py  test_training_smoke.py
tests/fixtures/: instruction_data.jsonl
tokenizer_lib/: __init__.py  functional.py  gpt2_tokenizer_hf.py
utils/: __init__.py  utils.py
(+12 files in other folders)
